Apply set and get local storage when loging to website and completed history page with call API

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -28,6 +28,17 @@
     }
   }
 
+  .currentUser {
+    top: 90px;
+    right: 20px;
+    position: absolute;
+
+    span {
+      font-weight: 700;
+      color: #0bb102;
+    }
+  }
+
   .container-body {
     display: flex;
     justify-content: space-between;
