--- a/src/pages/productDetail/productDetail.scss
+++ b/src/pages/productDetail/productDetail.scss
@@ -80,6 +80,10 @@
       margin: 20px 0;
       text-align: center;
 
+      .btnCart {
+        margin-top: 20px !important;
+      }
+
       p {
         font-size: 18px;
         font-weight: 600;
