--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -39,6 +39,13 @@
     }
   }
 
+  .imgBanner {
+    width: 100%;
+    height: 350px;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
   .container-body {
     display: flex;
     justify-content: space-between;
